--- a/scss/style.css
+++ b/scss/style.css
@@ -9,7 +9,8 @@ $white: #fafafa;
 body {
   font-size: 2rem;
   font-family: 'Encode Sans Expanded', sans-serif;
-  background: $blue;
+  background-image: url("./mountain.jpg");
+//  background: $red;
   color: $white;
   padding-top: 4em;
   @media(max-width: 600px) {
@@ -77,3 +78,4 @@ body {
     border: 2px solid $red;
   }
 }
+
