--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   font-size: 2rem;
   font-family: 'Encode Sans Expanded', sans-serif;
   background-image: url("../mountain.jpg");
+background-size: cover;
   color: #fafafa;
   padding-top: 4em;
 }
@@ -58,7 +59,7 @@ body {
 }
 
 .timer {
-  border: 1px solid #a2aaae;
+  border: 5px solid white;
   border-radius: 100%;
   margin: 50px auto;
   width: 300px;
@@ -69,8 +70,11 @@ body {
   cursor: pointer;
 }
 .timer.breaktime {
-  border: 2px solid #00ff00;
+  border: 5px solid #00ff00;
+  color:  #00ff00;
 }
 .timer.worktime {
-  border: 2px solid #eb4a3e;
+  border: 5px solid #eb4a3e;
+    color: #eb4a3e;
 }
+
